[gd_scene load_steps=5 format=3 uid="uid://cpkxp8vg2ayj8"]

[ext_resource type="Script" path="res://Glasses.gd" id="1_u8nwn"]
[ext_resource type="Texture2D" uid="uid://doj303ltyjh6d" path="res://Assets/Texture assets/TempTutorialAssets/FileFolders.png" id="2_vd453"]
[ext_resource type="FontFile" uid="uid://dd7wuh3vhdjhu" path="res://Assets/Fonts/Rosarivo/Rosarivo-Regular.ttf" id="3_a4sb1"]

[sub_resource type="CircleShape2D" id="CircleShape2D_i4dwq"]
radius = 84.5931

[node name="Files" type="Area2D"]
script = ExtResource("1_u8nwn")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_i4dwq")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_vd453")

[node name="Panel" type="Panel" parent="."]
offset_left = -102.0
offset_top = -64.0
offset_right = 105.0
offset_bottom = -24.0
metadata/_edit_use_anchors_ = true

[node name="interaction_label" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -78.0
offset_top = -1.0
offset_right = 81.0
offset_bottom = 45.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("3_a4sb1")
theme_override_font_sizes/font_size = 25
text = "[P] To Pickup"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[connection signal="body_entered" from="." to="." method="_on_body_entered" flags=18]
[connection signal="body_exited" from="." to="." method="_on_body_exited" flags=18]
